objects/IP_Declaration_Component__c.object
<CustomObject>
    <description>Selected IP Declaration Component.</description>
    <fields>
        <fullName>Design_ID__c</fullName>
        <description>Please specify Design ID (if applicable). to be filled by user during IP Declaration.</description>
        <inlineHelpText>Please specify Design ID (if applicable).</inlineHelpText>
        <label>Design ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FV_IP_Type__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>FV IP Type</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FV_Vendor__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>FV Vendor</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>IP_Declaration_Form__r.Geometry__c</formula>
        <label>Geometry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Component__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>IP Component</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Declaration_Form__c</fullName>
        <description>one to many relationship to IP Declaration Form.</description>
        <label>IP Declaration Form</label>
        <referenceTo>IP_Declaration_Form__c</referenceTo>
        <relationshipLabel>IP Declaration Component</relationshipLabel>
        <relationshipName>IP_Declaration_Component</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IP_Type_Desc__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>IP Type Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>IP Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_VCID_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP VCID Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_IP_Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>IP Component where the data is copied from. to prevent master record from deletion. This field should be auto populated.</description>
        <label>Master IP Component</label>
        <referenceTo>IP_Component_from_ERP__c</referenceTo>
        <relationshipLabel>IP Declaration Component</relationshipLabel>
        <relationshipName>IP_Declaration_Component</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OIC_IP_Component__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>OIC IP Component</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Geometry__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>Tech Geometry</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Type__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>Tech Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Snapshot value copied from IP Component during IP Declaration.</description>
        <inlineHelpText>Snapshot value copied from IP Component during IP Declaration.</inlineHelpText>
        <label>Vendor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5V_Only__c</fullName>
        <description>SC9 High-density 5V Thick Gate Oxide Cell Library (0.18 um ULL 5V Cell Library) if applicable. to be filled by user in IP Declaration Form.</description>
        <inlineHelpText>SC9 High-density 5V Thick Gate Oxide Cell Library (0.18 um ULL 5V Cell Library) if applicable.</inlineHelpText>
        <label>5V Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IP Declaration Component</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>IP Declaration Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Declaration Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>